--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bitcoin = { version = "0.19", git = "https://github.com/jaspervdm/rust-bitcoin",
 rand = "0.7"
 serde = "1"
 rust-gmp = "0.5"
+sha2 = "0.8"
 
 [patch.crates-io]
 grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }
