--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ rand = "0.7"
 serde = "1"
 rust-gmp = "0.5"
 sha2 = "0.8"
+grin_core = "3"
+hex = "0.4"
 
 [patch.crates-io]
 grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }
