--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rust-gmp = "0.5"
 sha2 = "0.8"
 grin_core = "3"
 hex = "0.4"
+purerust_secp256k1 = { package = "libsecp256k1", version = "0.3" }
 
 [patch.crates-io]
 grin_secp256k1zkp = { git = "https://github.com/jaspervdm/rust-secp256k1-zkp", branch = "master" }
